# sailing/yachts/handlers.go
@@ -2,6 +2,7 @@ package yachts
 
 import (
 	"encoding/json"
+	"strconv"
 	"time"
 
 	"github.com/gofiber/fiber/v2"
@@ -14,6 +15,7 @@ type Writer func(interface{}) *gorm.DB
 
 func Route(r *fiber.App, s *gorm.DB) {
 	r.Get("/yachts", ListYachts(s.Find))
+	r.Get("/yachts/:id", FindYacht(s.Find))
 }
 
 type Yacht struct {
@@ -46,6 +48,46 @@ func ListYachts(find Reader) func(c *fiber.Ctx) error {
 		}
 
 		response, err := json.Marshal(yachts)
+		if err != nil {
+			return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+		}
+
+		return c.Send(response)
+	}
+}
+
+// @Summary Find
+// @Schemes
+// @Description Find yacht
+// @Tags yachts
+// @Accept application/json
+// @Param id path string true "id"
+// @Success 200 {object} Yacht
+// @Success 400
+// @Failure 500
+// @Failure 503
+// @Router /yachts/{id} [get]
+func FindYacht(first Reader) func(c *fiber.Ctx) error {
+	return func(c *fiber.Ctx) error {
+		id, err := strconv.ParseUint(c.Params("id"), 10, 32)
+		if err != nil {
+			return fiber.NewError(fiber.StatusBadRequest, err.Error())
+		}
+
+		yacht := Yacht{
+			ID: uint(id),
+		}
+
+		result := first(&yacht, id)
+		switch result.Error {
+		case gorm.ErrRecordNotFound:
+			return fiber.NewError(fiber.StatusNotFound, `{ "message": "not found" }`)
+		case nil:
+		default:
+			return fiber.NewError(fiber.StatusServiceUnavailable, result.Error.Error())
+		}
+
+		response, err := json.Marshal(yacht)
 		if err != nil {
 			return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 		}
